Create project and create task screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,10 @@ dependencies {
     api 'uk.co.markormesher:android-fab:2.2.2'
     //butter knife
     compile 'com.jakewharton:butterknife:6.1.0'
-    implementation'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.wangjiegulu:rfab:2.0.0'
 
 }
