--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,27 +4,24 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/flowit"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/flowit"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".home.Home"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".startupscreen.StartUpScreen"
-            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home.ProjectCreateActivity"
+        <activity android:name=".projectcreate.ProjectCreateActivity"
             android:theme="@style/ProjectTheme"/>
-        <activity android:name=".home.TaskCreateActivity"
+        <activity android:name=".task.TaskCreateActivity"
             android:theme="@style/TaskTheme"/>
     </application>
 
