commit login sign up

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,14 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.wangjiegulu:rfab:2.0.0'
+
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+//    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.android.support:support-annotations:27.1.1'
+    compile 'com.malinkang:rxvalidator:0.1'
+    annotationProcessor 'com.malinkang:rxvalidator-compiler:0.1'
 
 }
