--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="b12app.vyom.com.flowit">
+<uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,15 +15,25 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".projectcreate.ProjectCreateActivity"
+            android:theme="@style/ProjectTheme" />
+        <activity
+            android:name=".task.TaskCreateActivity"
+            android:theme="@style/TaskTheme" />
+        <activity android:name=".login.LoginActivity" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".projectcreate.ProjectCreateActivity"
-            android:theme="@style/ProjectTheme"/>
-        <activity android:name=".task.TaskCreateActivity"
-            android:theme="@style/TaskTheme"/>
+        <activity android:name=".register.SignupActivity"></activity>
     </application>
 
 </manifest>
