--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
     //annotation
     compile 'com.android.support:support-annotations:27.1.1'
+    compile 'com.android.volley:volley:1.1.0'
 }
