--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -24,6 +25,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -32,10 +37,16 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //rx validator
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.android.support:support-annotations:27.1.1'
+    compile 'com.malinkang:rxvalidator:0.1'
+    annotationProcessor 'com.malinkang:rxvalidator-compiler:0.1'
+
     api 'uk.co.markormesher:android-fab:2.2.2'
     //butter knife
     compile 'com.jakewharton:butterknife:6.1.0'
@@ -64,6 +75,10 @@ dependencies {
     //volley
     //annotation
     compile 'com.android.volley:volley:1.1.0'
+
+//    compile 'com.google.gms:google-services:3.2.1'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
