--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.jakewharton.butterknife'
-
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -10,8 +8,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        defaultConfig{
-
+        defaultConfig {
             multiDexEnabled true
         }
 
@@ -34,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
@@ -47,43 +44,39 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
+    //
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.wangjiegulu:rfab:2.0.0'
-
-//    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    //  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-//    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
-    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-    compile 'com.android.support:support-annotations:27.1.1'
-    compile 'com.malinkang:rxvalidator:0.1'
-    annotationProcessor 'com.malinkang:rxvalidator-compiler:0.1'
-
-    compile 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-design:1.0.0'
-
-
-
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     //rxJava
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //gson retrofit
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //annotation
     compile 'com.android.support:support-annotations:27.1.1'
-
-    // dagger2 依赖部分
+    // dagger2
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.google.dagger:dagger-compiler:2.0.2'
-
-    compile 'com.android.volley:volley:1.0.0'
-
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
-
+    //volley
+    //annotation
+    compile 'com.android.volley:volley:1.1.0'
+    //rx validator
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.android.support:support-annotations:27.1.1'
+    compile 'com.malinkang:rxvalidator:0.1'
+    annotationProcessor 'com.malinkang:rxvalidator-compiler:0.1'
+    //google - single sign on
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    //google - firebase db
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    //google - firebase fcm
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation files('libs/dropbox-android-sdk-1.6.3.jar')
 }
+
+apply plugin: 'com.google.gms.google-services'
+
+
