--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
 
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
     }
 }
 
@@ -37,6 +41,9 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     api 'uk.co.markormesher:android-fab:2.2.2'
@@ -75,6 +82,9 @@ dependencies {
     //google - firebase fcm
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation files('libs/dropbox-android-sdk-1.6.3.jar')
+
+    compile 'com.dropbox.core:dropbox-core-sdk:2.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
